<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="LabelFor">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/TitleText"
            android:text="@string/label_Time" />

        <TextView
            android:id="@+id/clockText"
            style="@style/MainText"
            android:textAlignment="center"
            tools:text="[01.01.1970\n13:02:37]" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/TitleText"
            android:text="@string/label_Countdown" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="8dp"
            android:hint="@string/hint_Seconds">

            <EditText
                android:id="@+id/countdownEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/countdownText"
            style="@style/MainText"
            tools:text="[02:37]" />

        <Button
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="bottom"
            android:id="@+id/countdownStartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Start" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/TitleText"
            android:text="@string/label_Stopwatch" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/stopwatchText"
                style="@style/MainText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/stopwatchText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="[00:00:00.]" />

            <TextView
                android:id="@+id/stopwatchMillisText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-medium"
                android:textColor="#2b2b2b"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@id/stopwatchText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/stopwatchText"
                tools:text="[0]" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp">

            <Button
                android:id="@+id/stopwatchStartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_Start" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/stopwatchEndButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_Pause" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>